# rustyScience

./: Cargo.toml  LICENCE  README.md
.github/workflows/: deploy-docs.yaml  rust.yml
benches/: main_benches.rs
benches/modules/: classification.rs  mod.rs  regression.rs
examples/: demo.rs  demo_benchmarks.rs  demo_classification.rs  demo_clustering.rs  demo_linear_models.rs  demo_nn.rs  demo_regression.rs  main.rs
src/: lib.rs  utils.rs
src/classification/: k_means.rs  knn.rs  mod.rs  perceptron.rs  svc.rs  tree.rs
src/clustering/: dbscan.rs  gaussian_mixture.rs  k_means.rs  kmeans.rs  knn.rs  mod.rs
src/common/: custom_error.rs  custom_panics.rs  knn.rs  mod.rs  test_utils.rs  tree.rs  utils.rs
src/data/: datasets.rs  generation.rs  mod.rs  utils.rs
src/data/datasets/: data_structs.rs  load_csv.rs
src/data/datasets/data_files/: credits
src/linear_models/: linear_regression.rs  mod.rs  multiple_linear_regression.rs  simple_linear_regression.rs
src/metrics/: accuracy_score.rs  loss.rs  mean_absolute_error.rs  mod.rs  r2.rs
src/neural_network/: activation.rs  activation_deriv.rs  layer.rs  mod.rs  model.rs  normalize.rs
src/regression/: knn.rs  mod.rs  perceptron.rs  svr.rs  tree.rs
src/tests/: integration_test.rs
tests/: integration_test.rs
tests/data/: mod.rs  test_import_data.rs
tests/data/datasets/: credits
tests/test_data/: mod.rs
tests/test_dbscan/: mod.rs  test_dbscan.rs
tests/test_knn/: mod.rs  test_knn_classification.rs  test_knn_clustering.rs  test_knn_clutering.rs  test_knn_regression.rs
tests/test_linear_models/: mod.rs  test_multiple_linear_regression.rs  test_simple_linear_regression.rs
tests/test_metrics/: accuracy_score.rs  mod.rs  r2.rs
tests/test_perceptron/: binary_perceptron.rs  mod.rs  multi_class_perceptron.rs  regression_perceptron.rs
tests/test_svc/: mod.rs  test_svc.rs
tests/test_svr/: mod.rs  test_svr.rs
tests/test_tree/: mod.rs  test_tree_classifier.rs
