[package]
name = "rusty_science"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8.5"
num = "0.4"
num-traits = "0.2"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas"] }
openssl = { version = "0.10", features = ["vendored"] }


[dev-dependencies]
serde = { version = "1.0.214", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "main_benches"
harness = false

