[package]
name = "rusty_science"
version = "0.1.1"
edition = "2021"
authors = ["Cooper Brown <cooper.brown197@gmail.com>, Jack Welsh <jack.welsh@drake.edu>"]
license = "MIT"
repository = "https://github.com/cbrown987/rustyScience/"
documentation = "https://docs.rs/rusty_science"  
homepage = "https://github.com/cbrown987/rustyScience/"
keywords = ["machine-learning", "ml", "data-science", "clustering"]
categories = ["science", "algorithms", "mathematics"]
description = "An easy to learn and use ML toolkit for rust"

[dependencies]
rand = "0.8.5"
num = "0.4"
num-traits = "0.2"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
ndarray-rand = "0.14"
kdtree = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "main_benches"
harness = false

